images: Use separate LDFLAGS for PBL
When setting CONFIG_PBL_RELOCATABLE=y (selected by PBL_MULTI_IMAGES) and
CONFIG_RELOCATABLE=n (trying to reduce image size), the PBL is also
linked with "-static" instead of "-pie". The result is a non-working
PBL.

As a side effect, also get rid of erroneous "-Map barebox.map" when
linking the PBL.

Only changed for ARM, are any other platforms affected?

Signed-off-by: Christian Eggers <ceggers@arri.de>
Signed-off-by: Sascha Hauer <s.hauer@pengutronix.de>

--- a/arch/arm/Makefile
+++ b/arch/arm/Makefile
@@ -140,11 +140,18 @@ CPPFLAGS += -DTEXT_BASE=$(TEXT_BASE)
 # Add cleanup flags
 CPPFLAGS += -fdata-sections -ffunction-sections
 LDFLAGS_barebox += --gc-sections
+LDFLAGS_pbl += --gc-sections
 
 ifdef CONFIG_RELOCATABLE
 LDFLAGS_barebox += -pie
 else
 LDFLAGS_barebox += -static
+endif
+
+ifdef CONFIG_PBL_RELOCATABLE
+LDFLAGS_pbl += -pie
+else
+LDFLAGS_pbl += -static
 endif
 
 KBUILD_BINARY := barebox.bin
