--- a/arch/arm/dts/Makefile
+++ b/arch/arm/dts/Makefile
@@ -2,12 +2,11 @@
 # created.
 obj- += dummy.o
 
+lwl-dtb-$(CONFIG_ARCH_CLPS711X) += ep7212-clep7212.dtb.o ep7211-edb7211.dtb.o
 lwl-dtb-$(CONFIG_MACH_ADVANTECH_ROM_742X) += imx6dl-advantech-rom-7421.dtb.o
 lwl-dtb-$(CONFIG_MACH_AFI_GF) += am335x-afi-gf.dtb.o
 lwl-dtb-$(CONFIG_MACH_BEAGLEBONE) += am335x-bone.dtb.o am335x-boneblack.dtb.o am335x-bone-common.dtb.o
 lwl-dtb-$(CONFIG_MACH_CANON_A1100) += canon-a1100.dtb.o
-lwl-dtb-$(CONFIG_MACH_CLPS711X_CLEP7212) += ep7212-clep7212.dtb.o
-lwl-dtb-$(CONFIG_MACH_CLPS711X_EDB7211) += ep7211-edb7211.dtb.o
 lwl-dtb-$(CONFIG_MACH_CM_FX6) += imx6dl-cm-fx6.dtb.o imx6q-cm-fx6.dtb.o imx6q-utilite.dtb.o
 lwl-dtb-$(CONFIG_MACH_DFI_FS700_M60) += imx6q-dfi-fs700-m60-6q.dtb.o imx6dl-dfi-fs700-m60-6s.dtb.o
 lwl-dtb-$(CONFIG_MACH_DUCKBILL) += imx28-duckbill.dtb.o
