--- a/arch/arm/dts/ep7212-clep7212.dts
+++ b/arch/arm/dts/ep7212-clep7212.dts
@@ -7,7 +7,7 @@
 	model = "Cirrus Logic EP7212";
 	compatible = "cirrus,clep7212", "cirrus,ep7212", "cirrus,ep7209";
 
-	memory {
+	memory@c0000000 {
 		device_type = "memory";
 		reg = <0xc0000000 0x02000000>;
 	};
