Fix kernel load address

--- a/arch/arm/dts/mm_imx51.dtsi
+++ b/arch/arm/dts/mm_imx51.dtsi
@@ -183,8 +183,8 @@
 	/* otgid: extcon {
 		pinctrl-names = "default";
 		pinctrl-0 = <&pinctrl_otgid>;
-		compatible = "linux,extcon-usb-gpio";
-		id-gpio = <&gpio4 19 GPIO_ACTIVE_HIGH>;
+		compatible = "gpio-usb-b-connector", "usb-b-connector";
+		id-gpios = <&gpio4 19 GPIO_ACTIVE_HIGH>;
 	}; */
 
 	sound {
