ARM: dts: imx6qdl: pfla02: Remove eeprom node
The upstream dtsi now has a eeprom node, so no need to duplicate
anymore. Let's keep the "page_size" property for a while.

--- a/arch/arm/dts/imx6qdl-phytec-pfla02.dtsi
+++ b/arch/arm/dts/imx6qdl-phytec-pfla02.dtsi
@@ -155,6 +155,10 @@
 	barebox,provide-mac-address = <&fec 0x620>;
 };
 
+&som_eeprom {
+	pagesize = <32>;
+};
+
 &usdhc3 {
 	#address-cells = <1>;
 	#size-cells = <1>;
@@ -174,12 +178,6 @@
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_i2c1>;
 	status = "okay";
-
-/*	eeprom: eeprom@50 {
-		compatible = "atmel,24c32";
-		pagesize = <32>;
-		reg = <0x50>;
-	};*/
 
 	pmic@58 {
 		watchdog-priority = <500>;
