--- a/arch/arm/dts/imx51-ccxmx51.dts
+++ b/arch/arm/dts/imx51-ccxmx51.dts
@@ -31,12 +31,12 @@
 
 	partition@c0000 {
 		label = "kernel";
-		reg = <0xc0000 0x400000>;
+		reg = <0xc0000 0x340000>;
 	};
 
-	partition@4c0000 {
+	partition@400000 {
 		label = "root";
-		reg = <0x4c0000 0>;
+		reg = <0x400000 0>;
 	};
 };
 
