--- a/arch/arm/dts/mm_imx6.dtsi
+++ b/arch/arm/dts/mm_imx6.dtsi
@@ -140,8 +140,9 @@
 				hsync-len = <30>;
 				vback-porch = <15>;
 				vfront-porch = <5>;
-				vsync-len = <1 3 5>;
-				pixelclk-active = <1>;
+				/*vsync-len = <1 3 5>;*/
+				vsync-len = <3>;
+				/*pixelclk-active = <1>;*/
 				hsync-active = <0>;
 				vsync-active = <0>;
 				de-active = <1>;
