--- a/arch/arm/dts/mm_imx6.dtsi
+++ b/arch/arm/dts/mm_imx6.dtsi
@@ -13,13 +13,13 @@
 
 		environment-spinor {
 			compatible = "barebox,environment";
-			device-path = &flash, "partname:env";
+			device-path = &som_flash, "partname:env";
 			status = "disabled";
 		};
 
 		environment-sd3 {
 			compatible = "barebox,environment";
-			device-path = &flash, "partname:env";
+			device-path = &som_flash, "partname:env";
 			status = "disabled";
 		};
 	};
@@ -46,28 +46,10 @@
 	status = "okay";
 };
 
-&flash {
-	/delete-node/ partitions;
-	partitions {
-		compatible = "fixed-partitions";
-		#address-cells = <1>;
-		#size-cells = <1>;
-
-		partition@0 {
-			label = "boot";
-			reg = <0x00000 0x80000>;
-		};
-
-		partition@80000 {
-			label = "env";
-			reg = <0x80000 0x40000>;
-		};
-
-		partition@c0000 {
-			label = "init";
-			reg = <0xc0000 0>;
-		};
-	};
+&clks {
+	assigned-clocks = <&clks IMX6QDL_CLK_LDB_DI0_SEL>;
+	assigned-clock-parents = <&clks IMX6QDL_CLK_PLL5_VIDEO_DIV>;
+	//assigned-clock-rates = <19200000>;
 };
 
 &gpmi {
@@ -140,8 +122,7 @@
 				hsync-len = <30>;
 				vback-porch = <15>;
 				vfront-porch = <5>;
-				/*vsync-len = <1 3 5>;*/
-				vsync-len = <3>;
+				vsync-len = <1 3 5>;
 				/*pixelclk-active = <1>;*/
 				hsync-active = <0>;
 				vsync-active = <0>;
@@ -172,6 +153,30 @@
 
 &pcie {
 	status = "disabled";
+};
+
+&som_flash {
+	/delete-node/ partitions;
+	partitions {
+		compatible = "fixed-partitions";
+		#address-cells = <1>;
+		#size-cells = <1>;
+
+		partition@0 {
+			label = "boot";
+			reg = <0x00000 0x80000>;
+		};
+
+		partition@80000 {
+			label = "env";
+			reg = <0x80000 0x40000>;
+		};
+
+		partition@c0000 {
+			label = "init";
+			reg = <0xc0000 0>;
+		};
+	};
 };
 
 &ssi2 {
