--- a/arch/arm/configs/mm_imx6_defconfig
+++ b/arch/arm/configs/mm_imx6_defconfig
@@ -6,6 +6,7 @@ CONFIG_THUMB2_BAREBOX=y
 CONFIG_ARM_OPTIMZED_STRING_FUNCTIONS=y
 CONFIG_ARM_UNWIND=y
 CONFIG_MMU=y
+CONFIG_MALLOC_SIZE=0
 CONFIG_EXPERIMENTAL=y
 CONFIG_MALLOC_TLSF=y
 CONFIG_KALLSYMS=y
