--- a/arch/arm/dts/mm_imx6.dtsi
+++ b/arch/arm/dts/mm_imx6.dtsi
@@ -119,7 +119,20 @@
 		display-timings {
 			native-mode = <&timing0>;
 
-			timing0: PH320240T {
+			timing0: G104XVN01_0 {
+				clock-frequency = <50000000 65000000 81000000>;
+				hactive = <1024>;
+				vactive = <768>;
+				hback-porch = <160>;
+				hfront-porch = <24>;
+				hsync-len = <136>;
+				vback-porch = <29>;
+				vfront-porch = <3>;
+				vsync-len = <6>;
+				de-active = <1>;
+			};
+
+			timing1: PH320240T {
 				clock-frequency = <6400000>;
 				hactive = <320>;
 				vactive = <240>;
