--- a/arch/arm/configs/mm_am335x_defconfig
+++ b/arch/arm/configs/mm_am335x_defconfig
@@ -94,6 +94,7 @@ CONFIG_WATCHDOG_OMAP=y
 CONFIG_PWM=y
 CONFIG_GPIO_74164=y
 CONFIG_GPIO_GENERIC_PLATFORM=y
+CONFIG_GPIO_PCA953X=y
 CONFIG_PINCTRL_SINGLE=y
 CONFIG_BUS_OMAP_GPMC=y
 CONFIG_REGULATOR=y
