--- a/arch/arm/configs/mm_imx6_defconfig
+++ b/arch/arm/configs/mm_imx6_defconfig
@@ -63,6 +63,7 @@ CONFIG_CMD_2048=y
 CONFIG_CMD_BAREBOX_UPDATE=y
 CONFIG_NET=y
 CONFIG_OF_BAREBOX_DRIVERS=y
+CONFIG_AIODEV=y
 CONFIG_DRIVER_NET_FEC_IMX=y
 CONFIG_MICREL_PHY=y
 CONFIG_DRIVER_SPI_IMX=y
@@ -73,6 +74,8 @@ CONFIG_NAND=y
 CONFIG_NAND_ALLOW_ERASE_BAD=y
 CONFIG_NAND_MXS=y
 CONFIG_MTD_UBI=y
+CONFIG_DISK_AHCI=y
+CONFIG_DISK_AHCI_IMX=y
 CONFIG_USB_HOST=y
 CONFIG_USB_IMX_CHIPIDEA=y
 CONFIG_USB_EHCI=y
@@ -81,6 +84,8 @@ CONFIG_USB_STORAGE=y
 CONFIG_VIDEO=y
 CONFIG_DRIVER_VIDEO_IMX_IPUV3=y
 CONFIG_DRIVER_VIDEO_IMX_IPUV3_LVDS=y
+CONFIG_DRIVER_VIDEO_BACKLIGHT=y
+CONFIG_DRIVER_VIDEO_BACKLIGHT_PWM=y
 CONFIG_MCI=y
 CONFIG_MCI_IMX_ESDHC=y
 CONFIG_MFD_DA9063=y
@@ -92,12 +97,14 @@ CONFIG_WATCHDOG_IMX=y
 CONFIG_PWM=y
 CONFIG_PWM_IMX=y
 CONFIG_MXS_APBH_DMA=y
+CONFIG_GPIO_PCA953X=y
 CONFIG_NVMEM_SNVS_LPGPR=y
 CONFIG_IMX_OCOTP=y
 CONFIG_IMX_OCOTP_WRITE=y
 CONFIG_IMX_WEIM=y
 CONFIG_REGULATOR=y
 CONFIG_REGULATOR_FIXED=y
+CONFIG_REGULATOR_ANATOP=y
 CONFIG_RESET_CONTROLLER=y
 CONFIG_GENERIC_PHY=y
 CONFIG_USB_NOP_XCEIV=y
