--- a/arch/arm/dts/mm_imx6.dtsi
+++ b/arch/arm/dts/mm_imx6.dtsi
@@ -1,8 +1,8 @@
 #include <dt-bindings/leds/common.h>
 
 / {
-	model = "Mega-Milas Informer i.MX6";
-	compatible = "milas,informer-imx6",
+	model = "Mega-Milas Spider i.MX6";
+	compatible = "milas,spider-imx6",
 		     "phytec,imx6x-pbab01", "phytec,imx6q-pfla02", "fsl,imx6q";
 
 	chosen {
@@ -24,26 +24,108 @@
 		};
 	};
 
+	backlight: backlight {
+		compatible = "pwm-backlight";
+		pwms = <&pwm1 0 100000>;
+		brightness-levels = <0 255>;
+		num-interpolated-steps = <16>;
+		default-brightness-level = <0>;
+	};
+
+	beeper: beeper {
+		compatible = "gpio-beeper";
+		gpios = <&pca9534 5 GPIO_ACTIVE_HIGH>;
+	};
+
+	clk12m: clk12m {
+		compatible = "fixed-clock";
+		clock-frequency = <12000000>;
+		
+		#clock-cells = <0>;
+	};
+
 	/delete-node/ oscillator;
+
+	leds {
+		led_brd {
+			gpios = <&pca9534 6 GPIO_ACTIVE_LOW>;
+			function = LED_FUNCTION_MTD;
+			color = <LED_COLOR_ID_RED>;
+			linux,default-trigger = LED_FUNCTION_MTD;
+			default-state = "off";
+		};
+	};
 
 	regulators {
 		/delete-node/ regulator@2;
 		/delete-node/ regulator@3;
+
+		vdd_5v0: reg@5 {
+			compatible = "regulator-fixed";
+			reg = <5>;
+			regulator-name = "vdd-5v0";
+			regulator-min-microvolt = <5000000>;
+			regulator-max-microvolt = <5000000>;
+			regulator-always-on;
+			regulator-boot-on;
+		};
+
+		vdd_3v3: reg@6 {
+			compatible = "regulator-fixed";
+			reg = <6>;
+			regulator-name = "vdd-3v3";
+			regulator-min-microvolt = <3300000>;
+			regulator-max-microvolt = <3300000>;
+			regulator-always-on;
+			regulator-boot-on;
+			vin-supply = <&vdd_5v0>;
+		};
+
+		vdd_1v8: reg@7 {
+			compatible = "regulator-fixed";
+			reg = <7>;
+			regulator-name = "vdd-1v8";
+			regulator-min-microvolt = <1800000>;
+			regulator-max-microvolt = <1800000>;
+			regulator-always-on;
+			regulator-boot-on;
+			vin-supply = <&vdd_3v3>;
+		};
 	};
 
 	/delete-node/ sound;
+
+	sound-pcm {
+		compatible = "simple-audio-card";
+		simple-audio-card,name = "SSI2AIC3104";
+		simple-audio-card,format = "i2s";
+		simple-audio-card,bitclock-master = <&audio_master>;
+		simple-audio-card,frame-master = <&audio_master>;
+
+		simple-audio-card,cpu {
+			sound-dai = <&ssi2>;
+		};
+
+		audio_master: simple-audio-card,codec {
+			sound-dai = <&tlv320aic3104>;
+		};
+	};
+
+	sound-spdif {
+		compatible = "fsl,imx-audio-spdif";
+		model = "IMX6SPDIF";
+		spdif-controller = <&spdif>;
+		spdif-in;
+		spdif-out;
+	};
 };
 
 &asrc {
 	status = "disabled";
 };
 
-&audmux {
-	status = "disabled";
-};
-
 &can1 {
-	status = "okay";
+	status = "disabled";
 };
 
 &clks {
@@ -55,6 +137,7 @@
 
 &gpmi {
 	/delete-node/ partitions;
+
 	partitions {
 		compatible = "fixed-partitions";
 		#address-cells = <1>;
@@ -71,31 +154,42 @@
 	status = "disabled";
 };
 
+&i2c1 {
+	clock-frequency = <400000>;
+};
+
 &i2c2 {
-	/delete-property/ clock-frequency;
+	clock-frequency = <400000>;
+
 	/delete-node/ tlv320@18;
 	/delete-node/ stmpe@41;
 	/delete-node/ rtc@51;
 	/delete-node/ adc@64;
 
-	/* WM8753 SCLK Low pulse-width MIN 1.3us */
-//	clock-frequency = <350000>;
+	tlv320aic3104: codec@18 {
+		compatible = "ti,tlv320aic3104";
+		reg = <0x18>;
+		clocks = <&clk12m>;
+		ai3x-micbias-vg = <1>;
+		ai3x-ocmv = <1>;
+		IOVDD-supply = <&vdd_3v3>;
+		DVDD-supply = <&vdd_1v8>;
+		AVDD-supply = <&vdd_3v3>;
+		DRVDD-supply = <&vdd_3v3>;
 
-//	wm8753: wm8753@1b {
-//		#sound-dai-cells = <0>;
-//		compatible = "wlf,wm8753";
-//		reg = <0x1b>;
-//	};
+		#sound-dai-cells = <0>;
+	};
 
-//	rtc@68 {
-//		compatible = "maxim,ds3231";
-//		reg = <0x68>;
-//		#clock-cells = <1>;
-//	};
+	pca9534: gpio@20 {
+		compatible = "nxp,pca9534";
+		reg = <0x20>;
+		gpio-controller;
+		
+		#gpio-cells = <2>;
+	};
 };
 
 &i2c3 {
-	/delete-property/ clock-frequency;
 	status = "disabled";
 };
 
@@ -104,7 +198,7 @@
 };
 
 &ldb {
-	/* Fix incorrect LVDS clock due err009219 patches */
+	/* Fix incorrect LVDS clock due ERR009219 patches */
 	assigned-clocks = <&clks IMX6QDL_CLK_PLL5_VIDEO>;
 	assigned-clock-parents = <0>;
 	assigned-clock-rates = <716800000>;
@@ -173,8 +267,21 @@
 	status = "disabled";
 };
 
+&pwm1 {
+	pinctrl-names = "default";
+	pinctrl-0 = <&pinctrl_pwm1>;
+	status = "okay";
+
+	#pwm-cells = <2>;
+};
+
+&sata {
+	status = "okay";
+};
+
 &som_flash {
 	/delete-node/ partitions;
+
 	partitions {
 		compatible = "fixed-partitions";
 		#address-cells = <1>;
@@ -197,8 +304,10 @@
 	};
 };
 
-&ssi2 {
-	status = "disabled";
+&spdif {
+	pinctrl-names = "default";
+	pinctrl-0 = <&pinctrl_spdif>;
+	status = "okay";
 };
 
 &uart1 {
@@ -210,12 +319,14 @@
 };
 
 &usbh1 {
-	disable-over-current;
+	over-current-active-low;
 };
 
 &usbotg {
 	dr_mode = "host";
-	disable-over-current;
+	over-current-active-low;
+
+	/delete-property/ disable-over-current;
 };
 
 &usdhc2 {
@@ -235,18 +346,37 @@
 	/delete-node/ partition@e0000;
 };
 
+&wdog1 {
+	timeout-sec = <10>;
+};
+
 &iomuxc {
 	imx6q-phytec-pfla02 {
-		pinctrl_uart3: uart3grp {
+		pinctrl_pwm1: pwm1grp {
 			fsl,pins = <
-				MX6QDL_PAD_EIM_D24__UART3_TX_DATA	0x1b0b1
-				MX6QDL_PAD_EIM_D25__UART3_RX_DATA	0x1b0b1
+				MX6QDL_PAD_DISP0_DAT8__PWM1_OUT		0x1b0b1
+			>;
+		};
+
+		pinctrl_spdif: spdifgrp {
+			fsl,pins = <
+				MX6QDL_PAD_ENET_RXD0__SPDIF_OUT		0x1b0b0
+				MX6QDL_PAD_GPIO_16__SPDIF_IN		0x1b0b0
+			>;
+		};
+
+		pinctrl_usbh1: usbh1grp {
+			fsl,pins = <
+				MX6QDL_PAD_GPIO_0__GPIO1_IO00		0x130b0
+				MX6QDL_PAD_GPIO_3__USB_H1_OC		0x1b0b0
 			>;
 		};
 
 		pinctrl_usbotg: usbotggrp {
 			fsl,pins = <
-				MX6QDL_PAD_KEY_ROW4__USB_OTG_PWR	0x80000000
+				MX6QDL_PAD_KEY_ROW4__GPIO4_IO15		0x130b0
+				MX6QDL_PAD_GPIO_1__USB_OTG_ID		0x17059
+				MX6QDL_PAD_KEY_COL4__USB_OTG_OC		0x1b0b0
 			>;
 		};
 
