--- a/arch/arm/configs/mm_am335x_defconfig
+++ b/arch/arm/configs/mm_am335x_defconfig
@@ -54,7 +54,6 @@ CONFIG_CMD_DETECT=y
 CONFIG_CMD_FLASH=y
 CONFIG_CMD_GPIO=y
 CONFIG_CMD_I2C=y
-CONFIG_CMD_NANDTEST=y
 CONFIG_CMD_SPI=y
 CONFIG_CMD_WD=y
 CONFIG_CMD_WD_DEFAULT_TIMOUT=10
@@ -72,7 +71,9 @@ CONFIG_I2C_OMAP=y
 CONFIG_MTD=y
 # CONFIG_MTD_OOB_DEVICE is not set
 CONFIG_NAND=y
-CONFIG_NAND_ECC_BCH=y
+CONFIG_MTD_NAND_ECC_SOFT=y
+CONFIG_MTD_NAND_ECC_SW_BCH=y
+CONFIG_NAND_ECC_HW_SYNDROME=y
 CONFIG_NAND_ALLOW_ERASE_BAD=y
 CONFIG_NAND_OMAP_GPMC=y
 CONFIG_MTD_NAND_OMAP_ELM=y
