--- a/arch/arm/configs/mm_imx6_defconfig
+++ b/arch/arm/configs/mm_imx6_defconfig
@@ -55,7 +55,6 @@ CONFIG_CMD_DETECT=y
 CONFIG_CMD_FLASH=y
 CONFIG_CMD_GPIO=y
 CONFIG_CMD_I2C=y
-CONFIG_CMD_NANDTEST=y
 CONFIG_CMD_SPI=y
 CONFIG_CMD_WD=y
 CONFIG_CMD_WD_DEFAULT_TIMOUT=10
@@ -71,6 +70,9 @@ CONFIG_MTD=y
 CONFIG_MTD_M25P80=y
 CONFIG_MTD_SST25L=y
 CONFIG_NAND=y
+CONFIG_MTD_NAND_ECC_SOFT=y
+CONFIG_MTD_NAND_ECC_SW_BCH=y
+CONFIG_NAND_ECC_HW_SYNDROME=y
 CONFIG_NAND_ALLOW_ERASE_BAD=y
 CONFIG_NAND_MXS=y
 CONFIG_MTD_UBI=y
