--- a/arch/arm/configs/mm_am335x_mlo_defconfig
+++ b/arch/arm/configs/mm_am335x_mlo_defconfig
@@ -3,6 +3,7 @@ CONFIG_OMAP_BUILD_IFT=y
 CONFIG_OMAP_MULTI_BOARDS=y
 CONFIG_MACH_MYIRTECH_X335X=y
 CONFIG_THUMB2_BAREBOX=y
+# CONFIG_ARM_EXCEPTIONS is not set
 # CONFIG_BANNER is not set
 # CONFIG_MEMINFO is not set
 CONFIG_MMU=y
@@ -15,7 +16,6 @@ CONFIG_SHELL_NONE=y
 # CONFIG_ERRNO_MESSAGES is not set
 # CONFIG_TIMESTAMP is not set
 CONFIG_CONSOLE_ACTIVATE_NONE=y
-CONFIG_PARTITION_DISK_EFI=y
 CONFIG_OFDEVICE=y
 CONFIG_DRIVER_SERIAL_NS16550=y
 CONFIG_DRIVER_SERIAL_NS16550_OMAP_EXTENSIONS=y
@@ -24,6 +24,7 @@ CONFIG_MTD=y
 # CONFIG_MTD_WRITE is not set
 # CONFIG_MTD_OOB_DEVICE is not set
 CONFIG_NAND=y
+CONFIG_NAND_ECC_HW_SYNDROME=y
 CONFIG_NAND_OMAP_GPMC=y
 CONFIG_MTD_NAND_OMAP_ELM=y
 CONFIG_MCI=y
