--- a/arch/arm/dts/am335x-myirtech-myc.dtsi
+++ b/arch/arm/dts/am335x-myirtech-myc.dtsi
@@ -1,4 +1,4 @@
-/* SPDX-License-Identifier: GPL-2.0-or-later */
+// SPDX-License-Identifier: GPL-2.0-or-later
 /* SPDX-FileCopyrightText: Alexander Shiyan, <shc_work@mail.ru> */
 
 /* Based on code by myc_c335x.dts, MYiRtech.com */
