--- a/arch/arm/dts/mm_imx51.dtsi
+++ b/arch/arm/dts/mm_imx51.dtsi
@@ -7,13 +7,7 @@
 	compatible = "milas,informer-imx51",
 		     "digi,connectcore-ccxmx51-som", "fsl,imx51";
 
-/*
-	backlight0 {
-		compatible = "gpio-backlight";
-	};
-*/
-
-	backlight1 {
+	backlight {
 		compatible = "gpio-backlight";
 		gpios = <&outgpios 4 GPIO_ACTIVE_HIGH>;
 	};
@@ -218,19 +212,19 @@
 	pinctrl-0 = <&pinctrl_audmux>;
 	status = "okay";
 
-	audmux-ssi0 {
+	ssi0 {
 		fsl,audmux-port = <MX51_AUDMUX_PORT1_SSI0>;
 		fsl,port-config = <
-			(IMX_AUDMUX_V2_PTCR_TFSDIR |
+			(IMX_AUDMUX_V2_PTCR_SYN |
+			IMX_AUDMUX_V2_PTCR_TFSDIR |
 			IMX_AUDMUX_V2_PTCR_TFSEL(MX51_AUDMUX_PORT3) |
 			IMX_AUDMUX_V2_PTCR_TCLKDIR |
-			IMX_AUDMUX_V2_PTCR_TCSEL(MX51_AUDMUX_PORT3) |
-			IMX_AUDMUX_V2_PTCR_SYN)
+			IMX_AUDMUX_V2_PTCR_TCSEL(MX51_AUDMUX_PORT3))
 			IMX_AUDMUX_V2_PDCR_RXDSEL(MX51_AUDMUX_PORT3)
 		>;
 	};
 
-	audmux-aud3 {
+	aud3 {
 		fsl,audmux-port = <MX51_AUDMUX_PORT3>;
 		fsl,port-config = <
 			IMX_AUDMUX_V2_PTCR_SYN
@@ -242,7 +236,6 @@
 &ecspi1 {
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_ecspi1 &pinctrl_ecspi1cs>;
-	fsl,spi-num-chipselects = <3>;
 	cs-gpios = <&gpio4 24 GPIO_ACTIVE_HIGH>, <&gpio3 3 GPIO_ACTIVE_LOW>,
 		   <&gpio3 13 GPIO_ACTIVE_LOW>;
 
@@ -271,7 +264,6 @@
 
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_ecspi2>;
-	fsl,spi-num-chipselects = <4>;
 	cs-gpios = <&gpio3 6 GPIO_ACTIVE_LOW>, <&gpio1 0 GPIO_ACTIVE_LOW>,
 		   <&gpio1 1 GPIO_ACTIVE_LOW>, <&gpio4 26 GPIO_ACTIVE_LOW>;
 	status = "okay";
@@ -459,7 +451,6 @@
 };
 
 &ssi1 {
-	fsl,mode = "i2s-slave";
 	status = "okay";
 };
 
