--- a/arch/arm/dts/mm_imx51.dtsi
+++ b/arch/arm/dts/mm_imx51.dtsi
@@ -268,7 +268,7 @@
 		   <&gpio1 1 GPIO_ACTIVE_LOW>, <&gpio4 26 GPIO_ACTIVE_LOW>;
 	status = "okay";
 
-	max14830: max14830@0 {
+	max14830@0 {
 		compatible = "maxim,max14830";
 		reg = <0>;
 		spi-max-frequency = <16000000>;
@@ -334,7 +334,7 @@
 	/* WM8753 SCLK Low pulse-width MIN 1.3us */
 	clock-frequency = <350000>;
 
-	wm8753: wm8753@1b {
+	wm8753: codec@1b {
 		#sound-dai-cells = <0>;
 		compatible = "wlf,wm8753";
 		reg = <0x1b>;
