--- a/arch/arm/dts/mm_imx6.dtsi
+++ b/arch/arm/dts/mm_imx6.dtsi
@@ -94,7 +94,7 @@
 			vin-supply = <&vdd_5v0>;
 		};
 
-		vdd_1v8: reg@7 {
+		/*vdd_1v8: reg@7 {
 			compatible = "regulator-fixed";
 			reg = <7>;
 			regulator-name = "vdd-1v8";
@@ -103,18 +103,18 @@
 			regulator-always-on;
 			regulator-boot-on;
 			vin-supply = <&vdd_3v3>;
-		};
+		};*/
 	};
 
 	/delete-node/ sound;
 
-	/*sound-pcm {
+	/*sound-pcm0 {
 		compatible = "simple-audio-card";
 		simple-audio-card,name = "SSI2AIC3104";
 		simple-audio-card,format = "i2s";
-		simple-audio-card,bitclock-master = <&audio_master>;
-		simple-audio-card,frame-master = <&audio_master>;
-		simple-audio-card,mclk-fs = <256>;
+		simple-audio-card,bitclock-master = <&sound0_master>;
+		simple-audio-card,frame-master = <&sound0_master>;
+//		simple-audio-card,mclk-fs = <256>;
 		simple-audio-card,widgets =
 			"Microphone", "Mic Jack",
 			"Headphone", "Headphone Jack";
@@ -124,94 +124,63 @@
 			"MIC2R", "Mic Jack",
 			"Mic Jack", "Mic Bias";
 
-		audio_master: simple-audio-card,cpu {
+		simple-audio-card,cpu {
 			sound-dai = <&ssi2>;
-			dai-tdm-slot-num = <8>;
-			dai-tdm-slot-width = <24>;
 		};
 
-		simple-audio-card,codec {
+		sound0_master: simple-audio-card,codec {
 			sound-dai = <&tlv320aic3104>;
-			dai-tdm-slot-num = <8>;
-			dai-tdm-slot-width = <24>;
-			dai-tdm-slot-tx-mask = <0 0 0 0 0 0 1 1>;
-			dai-tdm-slot-rx-mask = <0 0 0 0 0 0 1 1>;
 		};
 	};*/
-//gst-launch-1.0 alsasrc device=hw:1 ! audioconvert ! audio/x-raw,channels=1 ! audioresample ! opusenc ! queue ! rtpgstpay config-interval=1 ! udpsink host=239.0.0.2 port=4383
-	sound-pcm {
+
+//gst-launch-1.0 alsasrc ! audio/x-raw,channels=4,fmt=S24LE ! audioconvert ! opusenc ! queue ! rtpgstpay config-interval=1 ! udpsink host=239.0.0.2 port=4380
+	/*sound-pcm0 {
 		compatible = "simple-audio-card";
-		simple-audio-card,name = "SSI2PCM3168A";
-//		simple-audio-card,format = "left_j";
-//		simple-audio-card,bitclock-master = <&pcm_master>;
-//		simple-audio-card,frame-master = <&pcm_master>;
-		//simple-audio-card,mclk-fs = <256>;
+		simple-audio-card,name = "ESAIAD1937";
+		simple-audio-card,format = "i2s";
+		simple-audio-card,bitclock-master = <&sound0_master>;
+		simple-audio-card,frame-master = <&sound0_master>;
+
+		simple-audio-card,cpu {
+			sound-dai = <&esai>;
+			dai-tdm-slot-num = <4>;
+			dai-tdm-slot-width = <32>;
+		};
+
+		sound0_master: simple-audio-card,codec {
+			sound-dai = <&ad1937>;
+			dai-tdm-slot-num = <4>;
+		};
+	};*/
+
+	sound-pcm1 {
+		compatible = "simple-audio-card";
+		simple-audio-card,name = "ESAIPCM3168A";
+		simple-audio-card,format = "left_j";
+		simple-audio-card,bitclock-master = <&sound1_master>;
+		simple-audio-card,frame-master = <&sound1_master>;
 		simple-audio-card,widgets =
-			"Speaker", "Channel1out",
-			"Speaker", "Channel2out",
-			"Speaker", "Channel3out",
-			"Speaker", "Channel4out",
 			"Microphone", "Channel1in",
 			"Microphone", "Channel2in",
 			"Microphone", "Channel3in",
 			"Microphone", "Channel4in";
 		simple-audio-card,routing =
-			"Channel1out", "AOUT1L",
-			"Channel2out", "AOUT1R",
-			"Channel3out", "AOUT2L",
-			"Channel4out", "AOUT2R",
 			"Channel1in", "AIN1L",
 			"Channel2in", "AIN1R",
 			"Channel3in", "AIN2L",
 			"Channel4in", "AIN2R";
 
-		simple-audio-card,dai-link@0 {
-			format = "left_j";
-			bitclock-master = <&pcm_master>;
-			frame-master = <&pcm_master>;
-
-			cpu {
-				sound-dai = <&ssi2>;
-				dai-tdm-slot-num = <8>;
-				dai-tdm-slot-width = <24>;
-				dai-tdm-slot-rx-mask = <1 1 1 1 0 0 0 0>;
-				dai-tdm-slot-tx-mask = <1 1 1 1 0 0 0 0>;
-			};
-
-			pcm_master: codec {
-				sound-dai = <&pcm3168a 0>;
-				dai-tdm-slot-num = <8>;
-				dai-tdm-slot-width = <32>;
-				//dai-tdm-slot-tx-mask = <1 1 1 1 0 0 0 0>;
-			};
+		simple-audio-card,cpu {
+			sound-dai = <&esai>;
+			dai-tdm-slot-num = <8>;
+			dai-tdm-slot-width = <32>;
 		};
 
-//			codec@1 {
-//				sound-dai = <&pcm3168a 1>;
-//				dai-tdm-slot-num = <8>;
-//				dai-tdm-slot-width = <32>;
-//				//dai-tdm-slot-rx-mask = <1 1 1 1 0 0 0 0>;
-//			};
-
-//		audio_master: simple-audio-card,cpu {
-//			sound-dai = <&ssi2>;
-//			dai-tdm-slot-num = <8>;
-//			dai-tdm-slot-width = <24>;
-//			dai-tdm-slot-tx-mask = <1 1 1 1 0 0 0 0>;
-//		};
-//
-//		simple-audio-card,codec@0 {
-//			sound-dai = <&pcm3168a 0>;
-//			dai-tdm-slot-num = <8>;
-//			dai-tdm-slot-width = <24>;
-//			//dai-tdm-slot-tx-mask = <1 1 1 1 0 0 0 0>;
-//		};
-
-		//simple-audio-card,codec@1 {
-		//	sound-dai = <&pcm3168a 1>;
-			//dai-tdm-slot-num = <6>;
-			//dai-tdm-slot-width = <24>;
-		//};
+		sound1_master: simple-audio-card,codec {
+			sound-dai = <&pcm3168a 1>;
+			dai-tdm-slot-num = <8>;
+			dai-tdm-slot-width = <32>;
+		};
 	};
 
 	/*sound-spdif {
@@ -260,6 +229,19 @@
 				 <&clks IMX6QDL_CLK_PLL5_VIDEO_DIV>;
 };
 
+&esai {
+	pinctrl-names = "default";
+	pinctrl-0 = <&pinctrl_esai>;
+//	assigned-clocks = <&clks IMX6QDL_CLK_PLL4_AUDIO>,
+//			  <&clks IMX6QDL_CLK_ESAI_SEL>,
+//			  <&clks IMX6QDL_CLK_ESAI_EXTAL>;
+//	assigned-clock-parents = <0>, <&clks IMX6QDL_CLK_PLL4_AUDIO_DIV>, <0>;
+//	assigned-clock-rates = <786432000>, <0>, <24576000>;
+	fsl,esai-synchronous;
+	fsl,fifo-depth = <128>;
+	status = "okay";
+};
+
 &gpmi {
 	/delete-node/ partitions;
 
@@ -284,13 +266,18 @@
 };
 
 &i2c2 {
-	//TEMP slowdown !!!!!!
-	clock-frequency = <100000>;
-
 	/delete-node/ tlv320@18;
 	/delete-node/ stmpe@41;
 	/delete-node/ rtc@51;
 	/delete-node/ adc@64;
+
+	/*ad1937: codec@4 {
+		compatible = "adi,ad1937";
+		reg = <0x4>;
+		clocks = <&clk12m288>;
+
+		#sound-dai-cells = <0>;
+	};*/
 
 	tlv320aic3104: codec@18 {
 		compatible = "ti,tlv320aic3104";
@@ -312,6 +299,19 @@
 		gpio-controller;
 		
 		#gpio-cells = <2>;
+	};
+
+	dispver: gpio@41 {
+		compatible = "nxp,pca9536";
+		reg = <0x41>;
+		gpio-controller;
+		
+		#gpio-cells = <2>;
+	};
+
+	light: sensor@4a {
+		compatible = "maxim,max44009";
+		reg = <0x4a>;
 	};
 
 	pcm3168a: codec@44 {
@@ -502,6 +502,15 @@
 			>;
 		};*/
 
+		pinctrl_esai: esaigrp {
+			fsl,pins = <
+				MX6QDL_PAD_GPIO_2__ESAI_TX_FS		0x130b0
+				MX6QDL_PAD_GPIO_6__ESAI_TX_CLK		0x130b0
+				MX6QDL_PAD_GPIO_8__ESAI_TX5_RX0		0x130b0
+				MX6QDL_PAD_GPIO_17__ESAI_TX0		0x110b0
+			>;
+		};
+
 		pinctrl_pwm1: pwm1grp {
 			fsl,pins = <
 				MX6QDL_PAD_DISP0_DAT8__PWM1_OUT		0x1b0b1
@@ -517,7 +526,7 @@
 
 		pinctrl_usbh1: usbh1grp {
 			fsl,pins = <
-				MX6QDL_PAD_GPIO_0__GPIO1_IO00		0x130b0
+				MX6QDL_PAD_GPIO_0__GPIO1_IO00		0x1b0b0
 				MX6QDL_PAD_GPIO_3__USB_H1_OC		0x1b0b0
 			>;
 		};
