--- a/arch/arm/dts/mm_am335x.dtsi
+++ b/arch/arm/dts/mm_am335x.dtsi
@@ -62,6 +62,22 @@
 			linux,input-type = <EV_KEY>;
 			gpios = <&input 3 GPIO_ACTIVE_LOW>;
 		};
+
+		button@6 {
+			label = "PF_LOW";
+			linux,code = <SW_TABLET_MODE>;
+			linux,input-type = <EV_SW>;
+			debounce-interval = <0>;
+			gpios = <&input 6 GPIO_ACTIVE_LOW>;
+		};
+
+		button@7 {
+			label = "PF_HIGH";
+			linux,code = <SW_HEADPHONE_INSERT>;
+			linux,input-type = <EV_SW>;
+			debounce-interval = <0>;
+			gpios = <&input 7 GPIO_ACTIVE_LOW>;
+		};
 	};
 
 	panel {
@@ -287,6 +303,15 @@
 	pinctrl-names = "default";
 	pinctrl-0 = <&mm_spi1_pins>;
 	status = "okay";
+
+	outgpios: gpio@0 {
+		compatible = "fairchild,74hc595";
+		reg = <0>;
+		spi-max-frequency = <4000000>;
+		registers-number = <2>;
+		gpio-controller;
+		#gpio-cells = <2>;
+	};
 };
 
 &tscadc {
