--- a/arch/arm/dts/mm_am335x.dtsi
+++ b/arch/arm/dts/mm_am335x.dtsi
@@ -37,28 +37,28 @@
 
 		button@0 {
 			label = "BTN0";
-			linux,code = <KEY_0>;
+			linux,code = <0x0100>;
 			linux,input-type = <EV_KEY>;
 			gpios = <&input 0 GPIO_ACTIVE_LOW>;
 		};
 
 		button@1 {
 			label = "BTN1";
-			linux,code = <KEY_1>;
+			linux,code = <0x0101>;
 			linux,input-type = <EV_KEY>;
 			gpios = <&input 1 GPIO_ACTIVE_LOW>;
 		};
 
 		button@2 {
 			label = "BTN2";
-			linux,code = <KEY_2>;
+			linux,code = <0x0102>;
 			linux,input-type = <EV_KEY>;
 			gpios = <&input 2 GPIO_ACTIVE_LOW>;
 		};
 
 		button@3 {
 			label = "BTN3";
-			linux,code = <KEY_3>;
+			linux,code = <0x0103>;
 			linux,input-type = <EV_KEY>;
 			gpios = <&input 3 GPIO_ACTIVE_LOW>;
 		};
