--- a/arch/arm/dts/mm_imx6.dtsi
+++ b/arch/arm/dts/mm_imx6.dtsi
@@ -37,18 +37,93 @@
 		gpios = <&hwrev 5 GPIO_ACTIVE_HIGH>;
 	};
 
-/*BUG TEST
 	gpiokeys {
 		compatible = "gpio-keys";
 
 		button@0 {
-			label = "TEST";
-			linux,code = <0x101>;
+			label = "KEY110";
+			linux,code = <0x0110>;
+			linux,input-type = <EV_KEY>;
+			gpios = <&input 0 GPIO_ACTIVE_LOW>;
+		};
+
+		button@1 {
+			label = "KEY111";
+			linux,code = <0x0111>;
+			linux,input-type = <EV_KEY>;
+			gpios = <&input 1 GPIO_ACTIVE_LOW>;
+		};
+
+		button@2 {
+			label = "KEY112";
+			linux,code = <0x0112>;
+			linux,input-type = <EV_KEY>;
+			gpios = <&input 2 GPIO_ACTIVE_LOW>;
+		};
+
+		button@3 {
+			label = "KEY113";
+			linux,code = <0x0113>;
+			linux,input-type = <EV_KEY>;
+			gpios = <&input 3 GPIO_ACTIVE_LOW>;
+		};
+
+		button@8 {
+			label = "SW08";
+			linux,code = <SW_VIDEOOUT_INSERT>;
 			linux,input-type = <EV_SW>;
-			gpios = <&gpio1 27 GPIO_ACTIVE_LOW>;
+			gpios = <&input 8 GPIO_ACTIVE_LOW>;
+		};
+
+		button@9 {
+			label = "SW09";
+			linux,code = <SW_CAMERA_LENS_COVER>;
+			linux,input-type = <EV_SW>;
+			gpios = <&input 9 GPIO_ACTIVE_LOW>;
+		};
+
+		button@10 {
+			label = "SW10";
+			linux,code = <SW_KEYPAD_SLIDE>;
+			linux,input-type = <EV_SW>;
+			gpios = <&input 10 GPIO_ACTIVE_LOW>;
+		};
+
+		button@11 {
+			label = "SW11";
+			linux,code = <SW_FRONT_PROXIMITY>;
+			linux,input-type = <EV_SW>;
+			gpios = <&input 11 GPIO_ACTIVE_LOW>;
+		};
+
+		button@12 {
+			label = "SW12";
+			linux,code = <SW_ROTATE_LOCK>;
+			linux,input-type = <EV_SW>;
+			gpios = <&input 12 GPIO_ACTIVE_LOW>;
+		};
+
+		button@13 {
+			label = "SW13";
+			linux,code = <SW_LINEIN_INSERT>;
+			linux,input-type = <EV_SW>;
+			gpios = <&input 13 GPIO_ACTIVE_LOW>;
+		};
+
+		button@14 {
+			label = "SW14";
+			linux,code = <SW_MUTE_DEVICE>;
+			linux,input-type = <EV_SW>;
+			gpios = <&input 14 GPIO_ACTIVE_LOW>;
+		};
+
+		button@15 {
+			label = "SW15";
+			linux,code = <SW_PEN_INSERTED>;
+			linux,input-type = <EV_SW>;
+			gpios = <&input 15 GPIO_ACTIVE_LOW>;
 		};
 	};
-*/
 
 	clk12m288: clk12m288 {
 		compatible = "fixed-clock";
@@ -134,6 +209,8 @@
 
 //gst-launch-1.0 alsasrc ! audio/x-raw,channels=4,fmt=S24LE ! audioconvert ! opusenc ! queue ! rtpgstpay config-interval=1 ! udpsink host=239.0.0.2 port=4380
 
+//gst-launch-1.0 alsasrc device=hw:1 ! audio/x-raw,channels=4,fmt=S24LE ! audioconvert ! opusenc ! queue ! rtpgstpay config-interval=1 ! udpsink host=239.0.0.2 port=4380
+
 	sound-pcm1 {
 		compatible = "simple-audio-card";
 		simple-audio-card,name = "ESAIPCM3168A";
@@ -164,13 +241,12 @@
 		};
 	};
 
-	/*sound-spdif {
+	sound-spdif {
 		compatible = "fsl,imx-audio-spdif";
 		model = "IMX6SPDIF";
 		spdif-controller = <&spdif>;
 		spdif-in;
-		spdif-out;
-	};*/
+	};
 };
 
 &asrc {
@@ -197,7 +273,6 @@
 //	assigned-clock-parents = <0>, <&clks IMX6QDL_CLK_PLL4_AUDIO_DIV>, <0>;
 //	assigned-clock-rates = <786432000>, <0>, <24576000>;
 	fsl,esai-synchronous;
-	fsl,fifo-depth = <128>;
 	status = "okay";
 };
 
@@ -250,6 +325,20 @@
 		gpio-controller;
 		
 		#gpio-cells = <2>;
+	};
+
+	input: gpio@22 {
+		pinctrl-names = "default";
+		pinctrl-0 = <&pinctrl_input>;
+		compatible = "nxp,pca9535";
+		reg = <0x22>;
+		gpio-controller;
+		interrupt-parent = <&gpio1>;
+		interrupts = <13 IRQ_TYPE_EDGE_BOTH>;
+		interrupt-controller;
+
+		#gpio-cells = <2>;
+		#interrupt-cells = <2>;
 	};
 
 	dispver: gpio@41 {
@@ -438,6 +527,14 @@
 	/delete-node/ partition@e0000;
 };
 
+&vdd_sd0_reg {
+	regulator-always-on;
+};
+
+&vdd_sd1_reg {
+	regulator-always-on;
+};
+
 &wdog1 {
 	timeout-sec = <10>;
 };
@@ -450,6 +547,12 @@
 				MX6QDL_PAD_GPIO_6__ESAI_TX_CLK		0x130b0
 				MX6QDL_PAD_GPIO_8__ESAI_TX5_RX0		0x130b0
 				MX6QDL_PAD_GPIO_17__ESAI_TX0		0x110b0
+			>;
+		};
+
+		pinctrl_input: inputgrp {
+			fsl,pins = <
+				MX6QDL_PAD_SD2_DAT2__GPIO1_IO13		0x4000e0b0		/* KB_IRQ */
 			>;
 		};
 
@@ -469,15 +572,15 @@
 		pinctrl_usbh1: usbh1grp {
 			fsl,pins = <
 				MX6QDL_PAD_GPIO_0__GPIO1_IO00		0x1b0b0
-				MX6QDL_PAD_GPIO_3__USB_H1_OC		0x1b0b0
+				MX6QDL_PAD_GPIO_3__USB_H1_OC		0x4001b0b0
 			>;
 		};
 
 		pinctrl_usbotg: usbotggrp {
 			fsl,pins = <
 				MX6QDL_PAD_KEY_ROW4__GPIO4_IO15		0x130b0
-				MX6QDL_PAD_GPIO_1__USB_OTG_ID		0x17059
-				MX6QDL_PAD_KEY_COL4__USB_OTG_OC		0x1b0b0
+				MX6QDL_PAD_GPIO_1__USB_OTG_ID		0x40017059
+				MX6QDL_PAD_KEY_COL4__USB_OTG_OC		0x4001b0b0
 			>;
 		};
 
