--- a/arch/arm/configs/mm_am335x_mlo_defconfig
+++ b/arch/arm/configs/mm_am335x_mlo_defconfig
@@ -16,10 +16,14 @@ CONFIG_SHELL_NONE=y
 # CONFIG_ERRNO_MESSAGES is not set
 # CONFIG_TIMESTAMP is not set
 CONFIG_CONSOLE_ACTIVATE_NONE=y
+CONFIG_COMPILE_LOGLEVEL=3
+CONFIG_DEFAULT_LOGLEVEL=3
 CONFIG_OFDEVICE=y
 CONFIG_DRIVER_SERIAL_NS16550=y
 CONFIG_DRIVER_SERIAL_NS16550_OMAP_EXTENSIONS=y
 # CONFIG_SPI is not set
+CONFIG_I2C=y
+CONFIG_I2C_OMAP=y
 CONFIG_MTD=y
 # CONFIG_MTD_WRITE is not set
 # CONFIG_MTD_OOB_DEVICE is not set
